tests/specs/class_extends.txt
# mod.ts
export class Class extends Object {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export class Class extends Object {}
  | ^

# output.txt
Defined in file:///mod.ts:1:1

class Class extends Object



# output.json
[
  {
    "name": "Class",
    "isDefault": false,
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "kind": "class",
    "classDef": {
      "isAbstract": false,
      "constructors": [],
      "properties": [],
      "indexSignatures": [],
      "methods": [],
      "extends": "Object",
      "implements": [],
      "typeParams": [],
      "superTypeParams": []
    }
  }
]
